--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -290,32 +290,108 @@
                             android:id="@android:id/tabcontent"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
+                            <LinearLayout
+                                android:layout_width="fill_parent"
+                                android:layout_height="fill_parent"
+                                android:id="@+id/tab1layout"
+                                android:orientation="vertical">
+                                <TableLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:stretchColumns="*"
+                                    android:background="@color/accent_material_light"
+                                    android:id="@+id/tab1table">
+                                <TableRow
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_horizontal"
+                                    android:background="@color/background_material_light">
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textAppearance="?android:attr/textAppearanceLarge"
+                                        android:text="重量"
+                                        android:id="@+id/textView2"
+                                        android:layout_column="0"
+                                        android:gravity="center" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textAppearance="?android:attr/textAppearanceLarge"
+                                        android:text="圓周"
+                                        android:id="@+id/textView7"
+                                        android:layout_column="1"
+                                        android:gravity="center" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textAppearance="?android:attr/textAppearanceLarge"
+                                        android:text="透氣率"
+                                        android:id="@+id/textView8"
+                                        android:layout_column="2"
+                                        android:gravity="center" />
+                                </TableRow>
+                                    <TableRow
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_gravity="center_horizontal"
+                                        android:background="@color/background_material_light"
+                                        android:layout_marginTop="1dp">
+                                    </TableRow>
+                                </TableLayout>
+                                <ListView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="0dp"
+                                    android:id="@+id/valueListView"
+                                    android:layout_weight="1" />
+                            </LinearLayout>
 
                             <LinearLayout
-                                android:orientation="vertical"
+                                android:layout_width="fill_parent"
+                                android:layout_height="fill_parent"
+                                android:id="@+id/tab2layout"
+                                android:orientation="vertical">
+                            <TableLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:id="@+id/tab1layout">
-                                <TextView
-                                    android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:stretchColumns="*"
+                                android:background="@color/accent_material_light"
+                                android:id="@+id/table2">
+                                <TableRow
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:textAppearance="?android:attr/textAppearanceLarge"
-                                    android:text="This is tab 1"
-                                    android:id="@+id/textView2"
-                                    android:layout_gravity="center_horizontal" />
-                            </LinearLayout>
-                            <LinearLayout
-                                android:orientation="vertical"
+                                    android:layout_gravity="center_horizontal"
+                                    android:background="@color/background_material_light">
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textAppearance="?android:attr/textAppearanceLarge"
+                                        android:text="生產線"
+                                        android:id="@+id/textView9"
+                                        android:layout_column="0" />
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textAppearance="?android:attr/textAppearanceLarge"
+                                        android:text="現在箱數"
+                                        android:id="@+id/textView10"
+                                        android:layout_column="1" />
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textAppearance="?android:attr/textAppearanceLarge"
+                                        android:text="目標箱數"
+                                        android:id="@+id/textView11"
+                                        android:layout_column="2" />
+                                </TableRow>
+                            </TableLayout>
+                            <ListView
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:id="@+id/tab2layout">
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:textAppearance="?android:attr/textAppearanceLarge"
-                                    android:text="This is tab 2"
-                                    android:id="@+id/textView6"
-                                    android:layout_gravity="center_horizontal" />
+                                android:layout_height="0dp"
+                                android:id="@+id/boxListView"
+                                android:layout_weight="1" />
                             </LinearLayout>
                         </FrameLayout>
                     </LinearLayout>
@@ -329,7 +405,7 @@
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:textSize="@dimen/abc_text_size_display_1_material"
-                android:text="this is marquee~"
+                android:text="[No system message]"
                 android:textColor="@color/black"
                 android:ellipsize="marquee"
                 android:marqueeRepeatLimit="marquee_forever"
