--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,10 +97,9 @@
                     android:textSize="@dimen/abc_text_size_display_1_material"
                     android:text="Brand Name"
                     android:id="@+id/brandName"
-                    android:layout_toEndOf="@+id/tv11"
-                    android:layout_alignBottom="@+id/tv11"
-                    android:layout_marginStart="30dp"
-                    android:textColor="#000000" />
+                    android:textColor="#000000"
+                    android:layout_above="@+id/textView"
+                    android:layout_alignStart="@+id/connectState" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -370,6 +369,7 @@
                                         android:textAppearance="?android:attr/textAppearanceLarge"
                                         android:text="生產線"
                                         android:id="@+id/textView9"
+                                        android:layout_marginStart="20dp"
                                         android:layout_column="0" />
                                     <TextView
                                         android:layout_width="wrap_content"
@@ -377,6 +377,7 @@
                                         android:textAppearance="?android:attr/textAppearanceLarge"
                                         android:text="現在箱數"
                                         android:id="@+id/textView10"
+                                        android:layout_marginStart="75dp"
                                         android:layout_column="1" />
                                     <TextView
                                         android:layout_width="wrap_content"
@@ -384,7 +385,9 @@
                                         android:textAppearance="?android:attr/textAppearanceLarge"
                                         android:text="目標箱數"
                                         android:id="@+id/textView11"
-                                        android:layout_column="2" />
+                                        android:layout_column="2"
+                                        android:paddingEnd="50dp"
+                                        android:layout_gravity="end" />
                                 </TableRow>
                             </TableLayout>
                             <ListView
