--- a/app/src/main/res/layout/box_item.xml
+++ b/app/src/main/res/layout/box_item.xml
@@ -11,7 +11,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"
+        android:textSize="30dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,7 +22,9 @@
         android:text="0"
         android:id="@+id/line"
         android:layout_alignTop="@+id/textView6"
-        android:layout_toEndOf="@+id/textView6" />
+        android:layout_toEndOf="@+id/textView6"
+        android:textIsSelectable="true"
+        android:textSize="30dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,7 +33,8 @@
         android:text="100"
         android:id="@+id/box"
         android:layout_alignTop="@+id/line"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="30dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -39,5 +44,6 @@
         android:id="@+id/targetBox"
         android:layout_alignTop="@+id/box"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="50dp" />
+        android:layout_marginEnd="50dp"
+        android:textSize="30dp" />
 </RelativeLayout>
