--- a/app/src/main/res/layout/value_item.xml
+++ b/app/src/main/res/layout/value_item.xml
@@ -16,12 +16,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="40dp"
         android:textColor="@color/green"
         android:text="Weight"
         android:id="@+id/weight"
         android:layout_below="@+id/brandName"
-        android:layout_alignStart="@+id/brandName" />
+        android:layout_alignStart="@+id/brandName"
+        android:layout_marginStart="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,7 +30,8 @@
         android:text="Max"
         android:id="@+id/maxWeight"
         android:layout_alignTop="@+id/weight"
-        android:layout_marginStart="120dp" />
+        android:layout_marginStart="150dp"
+        android:textSize="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,12 +39,13 @@
         android:text="Min"
         android:id="@+id/minWeight"
         android:layout_below="@+id/maxWeight"
-        android:layout_alignStart="@+id/maxWeight" />
+        android:layout_alignStart="@+id/maxWeight"
+        android:textSize="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="40dp"
         android:textColor="@color/green"
         android:text="Radius"
         android:id="@+id/radius"
@@ -56,7 +59,8 @@
         android:id="@+id/maxRadius"
         android:layout_alignTop="@+id/radius"
         android:layout_toEndOf="@+id/radius"
-        android:layout_marginStart="10dp"/>
+        android:layout_marginStart="10dp"
+        android:textSize="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -64,18 +68,19 @@
         android:text="Min"
         android:id="@+id/minRadius"
         android:layout_below="@+id/maxRadius"
-        android:layout_alignStart="@+id/maxRadius" />
+        android:layout_alignStart="@+id/maxRadius"
+        android:textSize="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="40dp"
         android:textColor="@color/green"
         android:text="Resist"
         android:id="@+id/resist"
         android:layout_alignTop="@+id/maxRadius"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="50dp" />
+        android:layout_marginEnd="60dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -84,7 +89,8 @@
         android:id="@+id/maxResist"
         android:layout_alignTop="@+id/resist"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="10dp"/>
+        android:layout_marginEnd="10dp"
+        android:textSize="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -92,6 +98,17 @@
         android:text="Min"
         android:id="@+id/minResist"
         android:layout_below="@+id/maxResist"
-        android:layout_alignStart="@+id/maxResist" />
+        android:layout_alignStart="@+id/maxResist"
+        android:textSize="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Last Update:00-00-00"
+        android:id="@+id/time"
+        android:layout_alignTop="@+id/brandName"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp"/>
 
 </RelativeLayout>
